--- a/codes/0_data_cleaning.ipynb
+++ b/codes/0_data_cleaning.ipynb
@@ -2278,10 +2278,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "degree_level = {'no degrees':0, 'HS diploma or equivalent':1, 'associate degree':2, 'bachelor\\'s degree':3}\n",
+    "\n",
+    "for i in range(df.shape[0]):\n",
+    "    # task 1\n",
+    "    if (df.loc[i,\"startingsector\"]=='All other') & (df.loc[i,\"Alternate starting occupational cluster\"] is not np.nan):\n",
+    "        df.loc[i,\"startingsector\"] = df.loc[i,\"Alternate starting occupational cluster\"]\n",
+    "    # task 2\n",
+    "    for j in [\"Education at start\", \"Education at end\"]:\n",
+    "        df.loc[i,j] = degree_level[df.loc[i,j]]\n",
+    "\n",
     "df2.to_csv(\"../data/processed/drop_columns.csv\", index=False)"
    ]
   },
